<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/totalView"
        android:text="@string/totalValue"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="32sp"
        android:textColor="#000000"
        android:textAlignment="viewEnd"
        android:layout_centerHorizontal="true"
        android:layout_above="@+id/entryView"
        android:layout_marginBottom="24dp"
        android:paddingBottom="9dp"
        android:paddingTop="9dp"
        android:paddingStart="9dp"
        android:paddingEnd="36dp"/>

    <TextView
        android:id="@+id/entryView"
        android:text="@string/entryValue"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="22sp"
        android:textColor="#000000"
        android:textAlignment="viewEnd"
        android:layout_centerHorizontal="true"
        android:layout_above="@+id/btnBackspace"
        android:layout_marginBottom="62dp"
        android:paddingBottom="9dp"
        android:paddingTop="9dp"
        android:paddingStart="9dp"
        android:paddingEnd="36dp"/>

    <Button
        android:id="@+id/btnClear"
        android:layout_width="242dp"
        android:layout_height="wrap_content"
        android:layout_above="@+id/keyPad"
        android:layout_marginStart="29dp"
        android:layout_marginBottom="2dp"
        android:backgroundTint="@color/red_70"
        android:text="@string/clear"
        android:textSize="22sp"
        android:textColor="@color/black"/>

    <Button
        android:id="@+id/btnBackspace"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/backspace"
        android:layout_above="@+id/keyPad"
        android:textSize="22sp"
        android:textColor="@color/white"
        android:backgroundTint="@color/gray"
        android:layout_alignEnd="@+id/keyPad"
        android:layout_marginEnd="29dp"
        android:layout_marginBottom="2dp"/>

    <TableLayout
        android:id="@+id/keyPad"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="0dp"
        android:paddingBottom="46dp"
        android:paddingTop="22dp"
        android:background="@color/black">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal">

            <Button
                android:id="@+id/btnOne"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/one"
                android:textColor="@color/white"
                android:textSize="26sp"
                android:backgroundTint="@color/black"/>

            <Button
                android:id="@+id/btnTwo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/two"
                android:textSize="26sp"
                android:textColor="@color/white"
                android:backgroundTint="@color/black"/>

            <Button
                android:id="@+id/btnThree"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/three"
                android:textSize="26sp"
                android:textColor="@color/white"
                android:backgroundTint="@color/black"/>

            <Button
                android:id="@+id/resultOff"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/resultOff"
                android:textSize="26sp"
                android:textColor="@color/white"
                android:backgroundTint="@color/green"/>

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal">

            <Button
                android:id="@+id/btnFour"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/four"
                android:textSize="26sp"
                android:textColor="@color/white"
                android:backgroundTint="@color/black"/>

            <Button
                android:id="@+id/btnFive"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/five"
                android:textSize="26sp"
                android:textColor="@color/white"
                android:backgroundTint="@color/black"/>

            <Button
                android:id="@+id/btnSix"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/six"
                android:textSize="26sp"
                android:textColor="@color/white"
                android:backgroundTint="@color/black"/>

            <Button
                android:id="@+id/btnAdd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add"
                android:textColor="@color/white"
                android:textSize="26sp"
                android:backgroundTint="@color/black"/>

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal">

            <Button
                android:id="@+id/btnSeven"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/seven"
                android:textSize="26sp"
                android:textColor="@color/white"
                android:backgroundTint="@color/black"/>

            <Button
                android:id="@+id/btnEight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/eight"
                android:textSize="26sp"
                android:textColor="@color/white"
                android:backgroundTint="@color/black"/>

            <Button
                android:id="@+id/btnNine"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nine"
                android:textSize="26sp"
                android:textColor="@color/white"
                android:backgroundTint="@color/black"/>

            <Button
                android:id="@+id/btnSub"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sub"
                android:textSize="26sp"
                android:textColor="@color/white"
                android:backgroundTint="@color/black"/>

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal">

            <Button
                android:id="@+id/btnDot"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dot"
                android:textSize="26sp"
                android:textColor="@color/white"
                android:backgroundTint="@color/black"/>

            <Button
                android:id="@+id/btnZero"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/black"
                android:text="@string/zero"
                android:textSize="26sp"
                android:textColor="@color/white"
                tools:ignore="DuplicateSpeakableTextCheck"/>

            <Button
                android:id="@+id/btnDiv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/div"
                android:textSize="26sp"
                android:textColor="@color/white"
                android:backgroundTint="@color/black"/>

            <Button
                android:id="@+id/btnMul"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mul"
                android:textSize="26sp"
                android:textColor="@color/white"
                android:backgroundTint="@color/black"/>

        </TableRow>
    </TableLayout>
</RelativeLayout>